@@ -1,5 +1,7 @@
 *SVN*
 
+* Deprecation: object transactions warning.  [Jeremy Kemper]
+
 * has_one :dependent => :nullify ignores nil associates.  #6528 [janovetz, Jeremy Kemper]
 
 * Oracle: resolve test failures, use prefetched primary key for inserts, check for null defaults. Factor out some common methods from all adapters.  #6515 [Michael Schoen]
